Integrate wallet with CAPE smart contract.
* Implement CapeWalletBackend for CapeBackend, enabling sponsor,
  wrap, and burn functionality
* Sponsor and wrap connect directly to CAPE contract using ethers
  wallet
* Refactor CapeContractState and MockCapeNetwork to be consistent with
  contract (processing transactions before wraps)
* Move most of the minimal relayer logic to lib.rs so that it can be
  called as a library from the wallet test.
* Add tests for wallet integration

--- a/wallet/Cargo.toml
+++ b/wallet/Cargo.toml
@@ -32,7 +32,7 @@ net = { git = "ssh://git@github.com/SpectrumXYZ/net.git" }
 rand_chacha = "0.3.1"
 regex = "1.5.4"
 reef = { git = "ssh://git@github.com/SpectrumXYZ/reef.git" }
-relayer = { path = "../relayer" }
+relayer = { path = "../relayer", features = ["testing"] }
 seahorse = { git = "ssh://git@github.com/SpectrumXYZ/seahorse.git", rev = "e3665f8731d1da3373827284e16bca98d839bbe8", features = ["testing"] }
 serde = { version = "1.0.123", features = ["derive", "rc"] }
 serde_derive = "1.0.118"
