--- a/.envrc
+++ b/.envrc
@@ -4,5 +4,9 @@ watch_file flake.lock
 watch_dir nix
 
 watch_file .env
+
+watch_file pyproject.toml
 watch_file poetry.lock
+
+watch_file contracts/package.json
 watch_file pnpm-lock.yaml
