--- a/wallet/Cargo.toml
+++ b/wallet/Cargo.toml
@@ -8,13 +8,13 @@ authors = [
 ]
 edition = "2018"
 license = "Copyright © 2022 Translucence Research, Inc. All rights reserved."
-default-run = "cape_wallet"
 
 [dependencies]
 async-std = { version = "1.9.0", features = ["unstable", "attributes"] }
 async-trait = "0.1.51"
 bincode = "1.3.3"
 cap-rust-sandbox = { path = "../contracts/rust" }
+escargot = "0.5.2"
 futures = "0.3.0"
 futures-util = "0.3.8"
 itertools = "0.10.1"
@@ -29,8 +29,9 @@ jf-utils = { features=["std"], git = "ssh://git@github.com/SpectrumXYZ/jellyfish
 markdown = "0.3"
 net = { git = "ssh://git@github.com/SpectrumXYZ/net.git" }
 rand_chacha = "0.3.1"
+regex = "1.5.4"
 reef = { git = "ssh://git@github.com/SpectrumXYZ/reef.git" }
-seahorse = { git = "ssh://git@github.com/SpectrumXYZ/seahorse.git", features = ["testing"] }
+seahorse = { git = "ssh://git@github.com/SpectrumXYZ/seahorse.git", rev = "e3665f8731d1da3373827284e16bca98d839bbe8", features = ["testing"] }
 serde = { version = "1.0.123", features = ["derive", "rc"] }
 serde_derive = "1.0.118"
 serde_json = "1.0.61"
@@ -39,6 +40,7 @@ snafu = { version = "0.7", features = ["backtraces"] }
 structopt = { version = "0.3", features = ["paw"] }
 strum = "0.20"
 strum_macros = "0.20.1"
+surf = "2.3.1"
 tagged-base64 = { git = "ssh://git@github.com/SpectrumXYZ/tagged-base64.git", branch = "main" }
 tempdir = "0.3.7"
 tide = "0.16.0"
