Separate slow tests into a different workflow.
* Add a Rust feature "slow tests"
* Annotate tests that shouldn't block merges with #[cfg(feature="slow-tests")]
* Add a separate GitHub workflow to run all the tests (including slow ones)

--- a/wallet/Cargo.toml
+++ b/wallet/Cargo.toml
@@ -57,3 +57,6 @@ universal-param = { git = "ssh://git@github.com/SpectrumXYZ/universal-param.git"
 [dev-dependencies]
 tempdir = "0.3.7"
 tracing-test = "0.2.1"
+
+[features]
+slow-tests = []
