--- a/wallet/Cargo.toml
+++ b/wallet/Cargo.toml
@@ -30,9 +30,9 @@ markdown = "0.3"
 net = { git = "ssh://git@github.com/SpectrumXYZ/net.git" }
 rand_chacha = "0.3.1"
 regex = "1.5.4"
-reef = { git = "ssh://git@github.com/SpectrumXYZ/reef.git", branch = "keyao-change-dep" }
+reef = { git = "ssh://git@github.com/SpectrumXYZ/reef.git", rev = "859f50ef6181dc81adb20d041e98ec75700cac94" }
 relayer = { path = "../relayer", features = ["testing"] }
-seahorse = { git = "ssh://git@github.com/SpectrumXYZ/seahorse.git", branch = "keyao-jf-dep", features = ["testing"] }
+seahorse = { git = "ssh://git@github.com/SpectrumXYZ/seahorse.git", rev = "63f12c7fa896f5a61a63b6ad1115a97c2987edb4", features = ["testing"] }
 serde = { version = "1.0.123", features = ["derive", "rc"] }
 serde_derive = "1.0.118"
 serde_json = "1.0.61"
