--- a/wallet/Cargo.toml
+++ b/wallet/Cargo.toml
@@ -53,6 +53,7 @@ tracing-distributed = "0.3.1"
 tracing-futures = "0.2"
 tracing-subscriber = "0.2.19"
 universal-param = { git = "ssh://git@github.com/SpectrumXYZ/universal-param.git" }
+flaky_test = "0.1.0"
 
 [dev-dependencies]
 tempdir = "0.3.7"
