Potential fix for submodule error
https://github.com/actions/checkout/issues/590#issuecomment-970586842

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,6 +31,10 @@ jobs:
         run: |
           apk add --no-cache tar git
 
+      - name: Potential broken submodules fix
+        run: |
+          git checkout -f $(git -c user.name=x -c user.email=x@x commit-tree $(git hash-object -t tree /dev/null) < /dev/null) || :
+
       - uses: actions/checkout@v2
         name: Checkout Repository
 
