--- a/addr_pk_map/Cargo.toml
+++ b/addr_pk_map/Cargo.toml
@@ -10,5 +10,7 @@ bincode = "1.3.3"
 itertools = "0.10.1"
 jf-aap = { features=["std"], git = "ssh://git@github.com/SpectrumXYZ/jellyfish-apps.git", rev = "eca7b7e85718c7770c24ad90dd34b8a07209a01b" }
 net = { git = "ssh://git@github.com/SpectrumXYZ/net.git" }
+rand_chacha = "0.3.1"
 serde = { version = "1.0", features = ["derive"] }
+surf = "2.3.2"
 tide = "0.16.0"
