--- a/relayer/Cargo.toml
+++ b/relayer/Cargo.toml
@@ -16,12 +16,12 @@ ethers = { git = "https://github.com/gakonst/ethers-rs", branch = "master" }
 
 jf-cap = { features = ["test_apis"], git = "ssh://git@github.com/SpectrumXYZ/cap.git", rev = "cba0b2fc682606b0a118b320d41f718c525b4192" }
 jf-primitives = { features=["std"], git = "ssh://git@github.com/SpectrumXYZ/jellyfish.git" }
-key-set = { git = "ssh://git@github.com/SpectrumXYZ/key-set.git", rev = "1cc35513c0f24c1d58d55ef699038fd647590555" }
+key-set = { git = "ssh://git@github.com/SpectrumXYZ/key-set.git" }
 
 lazy_static = "1.4.0"
 net = { git = "ssh://git@github.com/SpectrumXYZ/net.git" }
 rand_chacha = { version = "0.3.1", features = ["serde1"] }
-reef = { git = "ssh://git@github.com/SpectrumXYZ/reef.git", rev = "859f50ef6181dc81adb20d041e98ec75700cac94" }
+reef = { git = "ssh://git@github.com/SpectrumXYZ/reef.git" }
 serde = { version = "1.0.123", features = ["derive", "rc"] }
 serde_derive = "1.0.118"
 serde_json = "1.0.61"
