--- a/contracts/rust/Cargo.toml
+++ b/contracts/rust/Cargo.toml
@@ -10,7 +10,7 @@ doctest = false
 commit = { git = "ssh://git@github.com/SpectrumXYZ/commit.git", rev = "f48cd52c59755eade0605111826eef3df6abdcf8" }
 jf-plonk = { features=["std", "test_apis"], git = "ssh://git@github.com/SpectrumXYZ/jellyfish.git" }
 jf-primitives = { features=["std"], git = "ssh://git@github.com/SpectrumXYZ/jellyfish.git" }
-jf-aap = { features = ["test_apis"], git = "ssh://git@github.com/SpectrumXYZ/jellyfish-apps.git", rev = "c789791d61b46e69367f07bb375c1ae2cf66e0d9" }
+jf-cap = { features = ["test_apis"], git = "ssh://git@github.com/SpectrumXYZ/cap.git", rev = "cba0b2fc682606b0a118b320d41f718c525b4192" }
 jf-rescue = { features=["std"], git = "ssh://git@github.com/SpectrumXYZ/jellyfish.git" }
 jf-utils = { features=["std"], git = "ssh://git@github.com/SpectrumXYZ/jellyfish.git" }
 key-set = { git = "ssh://git@github.com/SpectrumXYZ/key-set.git" }
@@ -25,7 +25,7 @@ ethers = { features=["legacy"], git = "https://github.com/gakonst/ethers-rs", br
 ethers-core = { features=["legacy"], git = "https://github.com/gakonst/ethers-rs", branch = "master" }
 ethers-contract = { features=["legacy"], git = "https://github.com/gakonst/ethers-rs", branch = "master" }
 
-itertools = "0.10.1" # needed for jf-aap to compile
+itertools = "0.10.1" # needed for jf-cap to compile
 ark-std = "0.3.0"
 serde_json = "1.0.67"
 bincode = "1.3.3"
