--- a/wallet/Cargo.toml
+++ b/wallet/Cargo.toml
@@ -32,8 +32,7 @@ rand_chacha = "0.3.1"
 regex = "1.5.4"
 reef = { git = "ssh://git@github.com/SpectrumXYZ/reef.git" }
 relayer = { path = "../relayer", features = ["testing"] }
-seahorse = { git = "ssh://git@github.com/SpectrumXYZ/seahorse.git", branch = "zz-update-jellyfish-links", features = ["testing"] }
-# seahorse = { git = "ssh://git@github.com/SpectrumXYZ/seahorse.git", rev = "0420e2047cb498df029de253e5eb541ed1cbdeb5", features = ["testing"] }
+seahorse = { git = "ssh://git@github.com/SpectrumXYZ/seahorse.git", rev = "96951980e1ad947181a4663bd4d343d3bd2ef867", features = ["testing"] }
 serde = { version = "1.0.123", features = ["derive", "rc"] }
 serde_derive = "1.0.118"
 serde_json = "1.0.61"
