--- a/wallet/Cargo.toml
+++ b/wallet/Cargo.toml
@@ -25,14 +25,14 @@ lazy_static = "1.4.0"
 jf-plonk = { features=["std"], git = "ssh://git@github.com/SpectrumXYZ/jellyfish.git" }
 jf-primitives = { features=["std"], git = "ssh://git@github.com/SpectrumXYZ/jellyfish.git"}
 jf-utils = { features=["std"], git = "ssh://git@github.com/SpectrumXYZ/jellyfish.git"}
-
 markdown = "0.3"
 net = { git = "ssh://git@github.com/SpectrumXYZ/net.git" }
+pipe = { version = "0.4" }
 rand_chacha = "0.3.1"
 regex = "1.5.4"
 reef = { git = "ssh://git@github.com/SpectrumXYZ/reef.git" }
 relayer = { path = "../relayer", features = ["testing"] }
-seahorse = { git = "ssh://git@github.com/SpectrumXYZ/seahorse.git", rev = "0420e2047cb498df029de253e5eb541ed1cbdeb5", features = ["testing"] }
+seahorse = { git = "ssh://git@github.com/SpectrumXYZ/seahorse.git", branch = "keyao-make-pub", features = ["testing"] }
 serde = { version = "1.0.123", features = ["derive", "rc"] }
 serde_derive = "1.0.118"
 serde_json = "1.0.61"
