--- a/wallet/Cargo.toml
+++ b/wallet/Cargo.toml
@@ -12,6 +12,7 @@ license = "Copyright © 2022 Translucence Research, Inc. All rights reserved."
 [dependencies]
 async-std = { version = "1.9.0", features = ["unstable", "attributes"] }
 async-trait = "0.1.51"
+address_book = { path = "../address_book" }
 bincode = "1.3.3"
 cap-rust-sandbox = { path = "../contracts/rust" }
 escargot = "0.5.2"
@@ -32,7 +33,7 @@ rand_chacha = "0.3.1"
 regex = "1.5.4"
 reef = { git = "ssh://git@github.com/SpectrumXYZ/reef.git" }
 relayer = { path = "../relayer", features = ["testing"] }
-seahorse = { git = "ssh://git@github.com/SpectrumXYZ/seahorse.git", rev = "ace20bc5f1bcf5b88ca0562799b8e80e6c52e933", features = ["testing"] }
+seahorse = { git = "ssh://git@github.com/SpectrumXYZ/seahorse.git", branch = "keyao-key-type", features = ["testing"] }
 serde = { version = "1.0.123", features = ["derive", "rc"] }
 serde_derive = "1.0.118"
 serde_json = "1.0.61"
