--- a/address_book/Cargo.toml
+++ b/address_book/Cargo.toml
@@ -12,6 +12,7 @@ bincode = "1.3.3"
 itertools = "0.10.1"
 jf-cap = { features=["std"], git = "ssh://git@github.com/SpectrumXYZ/cap.git", rev = "cba0b2fc682606b0a118b320d41f718c525b4192" }
 net = { git = "ssh://git@github.com/SpectrumXYZ/net.git" }
+once_cell = "1"
 rand_chacha = "0.3.1"
 serde = { version = "1.0", features = ["derive"] }
 surf = "2.3.2"
