--- a/wallet/Cargo.toml
+++ b/wallet/Cargo.toml
@@ -12,6 +12,7 @@ license = "Copyright © 2022 Translucence Research, Inc. All rights reserved."
 [dependencies]
 async-std = { version = "1.9.0", features = ["unstable", "attributes"] }
 async-trait = "0.1.51"
+address_book = { path = "../address_book" }
 bincode = "1.3.3"
 cap-rust-sandbox = { path = "../contracts/rust" }
 escargot = "0.5.2"
@@ -32,7 +33,7 @@ rand_chacha = "0.3.1"
 regex = "1.5.4"
 reef = { git = "ssh://git@github.com/SpectrumXYZ/reef.git" }
 relayer = { path = "../relayer", features = ["testing"] }
-seahorse = { git = "ssh://git@github.com/SpectrumXYZ/seahorse.git", rev = "9e0f875998ff42016c1df3cf7109fee1be44a56b", features = ["testing"] }
+seahorse = { git = "ssh://git@github.com/SpectrumXYZ/seahorse.git", rev = "fc47d4da9ab5a1de6777e835c818b45cd8370041", features = ["testing"] }
 serde = { version = "1.0.123", features = ["derive", "rc"] }
 serde_derive = "1.0.118"
 serde_json = "1.0.61"
