--- a/eqs/api/api.toml
+++ b/eqs/api/api.toml
@@ -31,4 +31,10 @@ HEADING_DESCRIPTION = "Description"
 PATH = [ "get_cap_state" ]
 DOC = "Returns the current CAP blockchain state."
 
-
+[route.get_events_since]
+PATH = [ "get_events_since/:first", "get_events_since/:first/:max_count" ]
+":first" = "Integer"
+":max_count" = "Integer"
+DOC = "Returns the array of [up to max_count] events since the specified index (inclusive)"
+ERROR_first = "The index must be a non-negative integer."
+ERROR_max_count = "The max_count must be a non-negative, non-zero integer."
