--- a/wallet/Cargo.toml
+++ b/wallet/Cargo.toml
@@ -15,6 +15,7 @@ async-trait = "0.1.51"
 address_book = { path = "../address_book" }
 bincode = "1.3.3"
 cap-rust-sandbox = { path = "../contracts/rust" }
+commit = { git = "ssh://git@github.com/SpectrumXYZ/commit.git", rev = "f48cd52c59755eade0605111826eef3df6abdcf8" }
 escargot = "0.5.2"
 ethers = { git = "https://github.com/gakonst/ethers-rs", branch = "master" }
 futures = "0.3.0"
@@ -34,7 +35,7 @@ rand_chacha = "0.3.1"
 regex = "1.5.4"
 reef = { git = "ssh://git@github.com/SpectrumXYZ/reef.git" }
 relayer = { path = "../relayer", features = ["testing"] }
-seahorse = { git = "ssh://git@github.com/SpectrumXYZ/seahorse.git", rev = "1bbbd4772feacc16341a1e65f6cf4d3139624357", features = ["testing"] }
+seahorse = { git = "ssh://git@github.com/SpectrumXYZ/seahorse.git", rev = "db4ffe2ffaa192d1f4537eb61b910a9c10811d11", features = ["testing"] }
 serde = { version = "1.0.123", features = ["derive", "rc"] }
 serde_derive = "1.0.118"
 serde_json = "1.0.61"
