--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ authors = ["Espresso Systems <hello@espressosys.com>"]
 
 [tool.poetry.dependencies]
 python = "^3.9"
+md-toc = "^8.1.1"
 
 [tool.poetry.dev-dependencies]
 black = "^21.9b0"
