--- a/address_book/Cargo.toml
+++ b/address_book/Cargo.toml
@@ -7,11 +7,11 @@ description = "Web server that maintains a persistent mapping from user addresse
 
 [dependencies]
 async-std = { version = "1.6.0", features = ["attributes"] }
-atomic_store = { git = "ssh://git@github.com/SpectrumXYZ/atomicstore.git" }
+atomic_store = { git = "ssh://git@github.com/EspressoSystems/atomicstore.git" }
 bincode = "1.3.3"
 itertools = "0.10.1"
-jf-cap = { features=["std"], git = "ssh://git@github.com/SpectrumXYZ/cap.git", rev = "cba0b2fc682606b0a118b320d41f718c525b4192" }
-net = { git = "ssh://git@github.com/SpectrumXYZ/net.git" }
+jf-cap = { features=["std"], git = "ssh://git@github.com/EspressoSystems/cap.git", rev = "cba0b2fc682606b0a118b320d41f718c525b4192" }
+net = { git = "ssh://git@github.com/EspressoSystems/net.git" }
 once_cell = "1"
 rand_chacha = "0.3.1"
 serde = { version = "1.0", features = ["derive"] }
