--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,7 +18,7 @@ jobs:
   build:
     runs-on: self-hosted
     container:
-      image: ghcr.io/spectrumxyz/nix:main
+      image: ghcr.io/espressosystems/nix:main
       credentials:
         username: ancient123
         password: ${{ secrets.ORG_GITHUB_PAT }}
@@ -117,7 +117,7 @@ jobs:
         name: Generate Docker Metadata
         id: meta
         with:
-          images: ghcr.io/SpectrumXYZ/cape/wallet
+          images: ghcr.io/espressosystems/cape/wallet
 
       - uses: docker/build-push-action@v2
         name: Build and Push Docker
