--- a/wallet/Cargo.toml
+++ b/wallet/Cargo.toml
@@ -13,6 +13,7 @@ base64 = "0.13"
 bincode = "1.3.3"
 cap-rust-sandbox = { path = "../contracts/rust" }
 commit = { git = "https://github.com/EspressoSystems/commit.git", tag = "0.1.0" }
+eqs = { path = "../eqs" }
 escargot = "0.5.2"
 ethers = { git = "https://github.com/gakonst/ethers-rs", branch = "master" }
 futures = "0.3.0"
