--- a/relayer/Cargo.toml
+++ b/relayer/Cargo.toml
@@ -9,21 +9,21 @@ license = "GPL-3.0-or-later"
 
 [dependencies]
 async-std = { version = "1.10.0", features = ["unstable", "attributes", "tokio1"] }
-atomic_store = { version="0.0.2", registry="translucence" }
+atomic_store = { git = "https://github.com/EspressoSystems/atomicstore.git", tag = "0.1.0" }
 bincode = "1.3.3"
 cap-rust-sandbox = { path = "../contracts/rust" }
 dirs = "4.0"
 # may switch to `ethers = "0.6.2"` in the future; keeping this for compatibility for now
 ethers = { git = "https://github.com/gakonst/ethers-rs", branch = "master" }
 
-jf-cap = { features = ["test_apis"], git = "ssh://git@github.com/EspressoSystems/cap.git", rev = "16ad157f96d2102d59206df0106fb341302180d3" }
-jf-primitives = { features=["std"], git = "ssh://git@github.com/EspressoSystems/jellyfish.git" }
-key-set = { git = "ssh://git@github.com/EspressoSystems/key-set.git" }
+jf-cap = { features = ["test_apis"], git = "https://github.com/EspressoSystems/cap.git", tag = "0.0.1" }
+jf-primitives = { features=["std"], git = "https://github.com/EspressoSystems/jellyfish.git" }
+key-set = { git = "https://github.com/EspressoSystems/key-set.git" }
 
 lazy_static = "1.4.0"
-net = { git = "ssh://git@github.com/EspressoSystems/net.git" }
+net = { git = "https://github.com/EspressoSystems/net.git" }
 rand_chacha = { version = "0.3.1", features = ["serde1"] }
-reef = { git = "ssh://git@github.com/EspressoSystems/reef.git" }
+reef = { git = "https://github.com/EspressoSystems/reef.git" }
 serde = { version = "1.0.123", features = ["derive", "rc"] }
 serde_derive = "1.0.118"
 serde_json = "1.0.61"
