--- a/wallet/Cargo.toml
+++ b/wallet/Cargo.toml
@@ -11,27 +11,27 @@ async-trait = "0.1.51"
 address_book = { path = "../address_book" }
 bincode = "1.3.3"
 cap-rust-sandbox = { path = "../contracts/rust" }
-commit = { git = "ssh://git@github.com/EspressoSystems/commit.git", rev = "f48cd52c59755eade0605111826eef3df6abdcf8" }
+commit = { git = "https://github.com/EspressoSystems/commit.git", tag = "0.1.0" }
 escargot = "0.5.2"
 ethers = { git = "https://github.com/gakonst/ethers-rs", branch = "master" }
 futures = "0.3.0"
 futures-util = "0.3.8"
 itertools = "0.10.1"
-jf-cap = { features = ["test_apis"], git = "ssh://git@github.com/EspressoSystems/cap.git", rev = "16ad157f96d2102d59206df0106fb341302180d3" }
-key-set = { git = "ssh://git@github.com/EspressoSystems/key-set.git" }
+jf-cap = { features = ["test_apis"], git = "https://github.com/EspressoSystems/cap.git", tag = "0.0.1" }
+key-set = { git = "https://github.com/EspressoSystems/key-set.git" }
 lazy_static = "1.4.0"
-jf-plonk = { features=["std"], git = "ssh://git@github.com/EspressoSystems/jellyfish.git" }
-jf-primitives = { features=["std"], git = "ssh://git@github.com/EspressoSystems/jellyfish.git"}
-jf-utils = { features=["std"], git = "ssh://git@github.com/EspressoSystems/jellyfish.git"}
+jf-plonk = { features=["std"], git = "https://github.com/EspressoSystems/jellyfish.git" }
+jf-primitives = { features=["std"], git = "https://github.com/EspressoSystems/jellyfish.git"}
+jf-utils = { features=["std"], git = "https://github.com/EspressoSystems/jellyfish.git"}
 markdown = "0.3"
-net = { git = "ssh://git@github.com/EspressoSystems/net.git" }
+net = { git = "https://github.com/EspressoSystems/net.git" }
 rand = "0.8.4"
 pipe = { version = "0.4" }
 rand_chacha = "0.3.1"
 regex = "1.5.4"
-reef = { git = "ssh://git@github.com/EspressoSystems/reef.git" }
+reef = { git = "https://github.com/EspressoSystems/reef.git" }
 relayer = { path = "../relayer", features = ["testing"] }
-seahorse = { git = "ssh://git@github.com/EspressoSystems/seahorse.git", features = ["testing"] }
+seahorse = { git = "https://github.com/EspressoSystems/seahorse.git", features = ["testing"] }
 serde = { version = "1.0.123", features = ["derive", "rc"] }
 serde_derive = "1.0.118"
 serde_json = "1.0.61"
@@ -41,7 +41,7 @@ structopt = { version = "0.3", features = ["paw"] }
 strum = "0.20"
 strum_macros = "0.20.1"
 surf = "2.3.2"
-tagged-base64 = { git = "ssh://git@github.com/EspressoSystems/tagged-base64.git", branch = "main" }
+tagged-base64 = { git = "https://github.com/EspressoSystems/tagged-base64.git", branch = "main" }
 tempdir = "0.3.7"
 tide = "0.16.0"
 tide-websockets = "0.4.0"
